fix: menu logo alignment

--- a/Web/site.css
+++ b/Web/site.css
@@ -2,7 +2,7 @@
   --bar-width: 30px;
   --bar-height: 4px;
   --hamburger-gap: 5px;
-  --hamburger-margin: 10px;
+  --hamburger-margin: 30px;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
   --foreground-color: white;
   --background-color: black;
@@ -52,9 +52,11 @@ nav a {
 
 .grid-layout-menu {
   background-color: var(--background-color);
+  height: 90px;
 }
 
 .logo {
+  margin: 25px;
   height: 35px;
   width: auto;
 }
@@ -155,7 +157,6 @@ nav a {
     display: inline-flex;
     justify-content: space-between;
     align-items: center;
-    height: 90px;
   }
 
   .hamburger-menu {
